--- a/Samples/SimpleDemoNative/build.gradle
+++ b/Samples/SimpleDemoNative/build.gradle
@@ -54,13 +54,13 @@ configurations.all {
 dependencies {
     compile 'com.android.support:multidex:1.0.2'
     compile 'com.google.code.gson:gson:2.2.4'
-    compile 'com.twitter:twitter-text:1.13.0'
+    compile 'com.twitter:twitter-text:1.14.3'
     compile 'com.google.gms:google-services:3.1.2'
-    compile 'com.google.android.gms:play-services:11.6.0'
+    //compile 'com.google.android.gms:play-services:11.8.0'
     //compile 'com.google.android.gms:play-services-plus:9.8.0'
-    compile 'com.google.android.gms:play-services-plus:11.6.0'
+    compile 'com.google.android.gms:play-services-plus:11.8.0'
     //compile 'com.google.android.gms:play-services-auth:9.8.0'
-    compile 'com.google.android.gms:play-services-auth:11.6.0'
+    compile 'com.google.android.gms:play-services-auth:11.8.0'
     compile 'pub.devrel:easypermissions:0.3.0'
     compile('com.google.api-client:google-api-client-android:1.23.0') {
         exclude group: 'org.apache.httpcomponents'
@@ -71,14 +71,14 @@ dependencies {
     //Cardview required for Facebook SDK
     compile 'com.android.support:cardview-v7:27.+'
     compile 'com.android.support:appcompat-v7:27.+'
-    compile 'com.facebook.android:facebook-android-sdk:[4,5)'
+    compile 'com.facebook.android:facebook-android-sdk:4.30.+'
     compile project(':Jump')
     compile 'com.twitter.sdk.android:twitter:3.1.1'
 }
 
 android {
     compileSdkVersion 27
-    buildToolsVersion '27.0.2'
+    buildToolsVersion '27.0.3'
 
     //If building with strict Android 6.0 the following will need to be uncommented
     //See: https://developer.android.com/about/versions/marshmallow/android-6.0-changes.html
@@ -88,7 +88,7 @@ android {
 
     defaultConfig {
         applicationId "com.janrain.android.multidex.simpledemonative"
-        minSdkVersion 17
+        minSdkVersion 24
         targetSdkVersion 27
         multiDexEnabled = true
 
