--- a/Jump/build.gradle
+++ b/Jump/build.gradle
@@ -30,22 +30,21 @@ android {
 }
 
 dependencies {
-    compile 'com.android.support:support-v4:27.+'
-    compile files('libs/org.apache.http.legacy.jar')
-    compile 'com.squareup.okhttp:okhttp:2.5.0'
-    compile 'com.squareup.okhttp:okhttp-apache:2.5.0'
-    compile 'com.squareup.okio:okio:1.6.0'
-    compile 'com.squareup.picasso:picasso:2.5.2'
-    compile 'com.squareup.retrofit:retrofit:1.8.0'
-    compile 'net.openid:appauth:0.7.0'
+    api 'com.android.support:support-v4:27.1.0'
+    api files('libs/org.apache.http.legacy.jar')
+    api 'com.squareup.okhttp:okhttp:2.5.0'
+    api 'com.squareup.okhttp:okhttp-apache:2.5.0'
+    api 'com.squareup.okio:okio:1.6.0'
+    api 'com.squareup.picasso:picasso:2.5.2'
+    api 'com.squareup.retrofit:retrofit:1.8.0'
+    api 'net.openid:appauth:0.7.0'
 }
 
 allprojects {
     repositories {
-        jcenter()
-        maven {
-            url "https://maven.google.com"
-        }
+        mavenLocal()
+        mavenCentral()
+        google()
     }
     gradle.projectsEvaluated {
         tasks.withType(JavaCompile) {
