--- a/Samples/SimpleDemoNative/build.gradle
+++ b/Samples/SimpleDemoNative/build.gradle
@@ -2,8 +2,10 @@ apply plugin: 'com.android.application'
 
 buildscript {
     repositories {
-        jcenter()
+        mavenLocal()
+        mavenCentral()
         google()
+        jcenter()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.0.1'
@@ -11,12 +13,18 @@ buildscript {
     }
 }
 
-repositories {
-    jcenter()
-    maven {
-        url "https://maven.google.com" // Google's Maven repository
+allprojects {
+    repositories {
+        mavenLocal()
+        mavenCentral()
+        google()
+        jcenter()
     }
-    google()
+    gradle.projectsEvaluated {
+        tasks.withType(JavaCompile) {
+            options.compilerArgs << "-Xlint:unchecked" << "-Xlint:deprecation"
+        }
+    }
 }
 
 /*
@@ -52,28 +60,28 @@ configurations.all {
 */
 
 dependencies {
-    compile 'com.android.support:multidex:1.0.2'
-    compile 'com.google.code.gson:gson:2.2.4'
-    compile 'com.twitter:twitter-text:1.14.3'
-    compile 'com.google.gms:google-services:3.1.2'
-    //compile 'com.google.android.gms:play-services:11.8.0'
-    //compile 'com.google.android.gms:play-services-plus:9.8.0'
-    compile 'com.google.android.gms:play-services-plus:11.8.0'
-    //compile 'com.google.android.gms:play-services-auth:9.8.0'
-    compile 'com.google.android.gms:play-services-auth:11.8.0'
-    compile 'pub.devrel:easypermissions:0.3.0'
-    compile('com.google.api-client:google-api-client-android:1.23.0') {
+    implementation 'com.android.support:multidex:1.0.2'
+    implementation 'com.google.code.gson:gson:2.2.4'
+    implementation 'com.twitter:twitter-text:1.14.3'
+    implementation 'com.google.gms:google-services:3.1.2'
+    //implementation 'com.google.android.gms:play-services:11.8.0'
+    //implementation 'com.google.android.gms:play-services-plus:9.8.0'
+    implementation 'com.google.android.gms:play-services-plus:11.8.0'
+    //implementation 'com.google.android.gms:play-services-auth:9.8.0'
+    implementation 'com.google.android.gms:play-services-auth:11.8.0'
+    //implementation 'pub.devrel:easypermissions:0.3.0'
+    implementation('com.google.api-client:google-api-client-android:1.23.0') {
         exclude group: 'org.apache.httpcomponents'
     }
-    compile('com.google.apis:google-api-services-tasks:v1-rev48-1.23.0') {
+    implementation('com.google.apis:google-api-services-tasks:v1-rev48-1.23.0') {
         exclude group: 'org.apache.httpcomponents'
     }
     //Cardview required for Facebook SDK
-    compile 'com.android.support:cardview-v7:27.+'
-    compile 'com.android.support:appcompat-v7:27.+'
-    compile 'com.facebook.android:facebook-android-sdk:4.30.+'
-    compile project(':Jump')
-    compile 'com.twitter.sdk.android:twitter:3.1.1'
+    implementation 'com.android.support:cardview-v7:27.1.0'
+    implementation 'com.android.support:appcompat-v7:27.1.0'
+    implementation 'com.facebook.android:facebook-android-sdk:4.31.0'
+    implementation project(':Jump')
+    implementation 'com.twitter.sdk.android:twitter:3.2.0'
 }
 
 android {
@@ -124,14 +132,6 @@ android {
         release.setRoot('build-types/release')
     }
 
-}
-
-allprojects {
-    gradle.projectsEvaluated {
-        tasks.withType(JavaCompile) {
-            options.compilerArgs << "-Xlint:unchecked" << "-Xlint:deprecation"
-        }
-    }
 }
 
 apply plugin: 'com.google.gms.google-services'
