--- a/Samples/SimpleDemoNative/gradle.properties
+++ b/Samples/SimpleDemoNative/gradle.properties
@@ -13,7 +13,7 @@
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
 #Thu Feb 01 09:55:32 PST 2018
-systemProp.https.proxyPort=8888
-systemProp.http.proxyHost=192.168.88.15
-systemProp.https.proxyHost=192.168.88.15
-systemProp.http.proxyPort=8888
+#systemProp.https.proxyPort=8888
+#systemProp.http.proxyHost=192.168.88.15
+#systemProp.https.proxyHost=192.168.88.15
+#systemProp.http.proxyPort=8888
