--- a/Samples/SimpleDemoNative/AndroidManifest.xml
+++ b/Samples/SimpleDemoNative/AndroidManifest.xml
@@ -16,8 +16,8 @@
         android:label="@string/app_name"
         android:hardwareAccelerated="true"
         android:theme="@android:style/Theme.Holo.Light"
-        android:networkSecurityConfig="@xml/network_security_config"
         >
+        <!-- android:networkSecurityConfig="@xml/network_security_config" -->
         <!--  android:debuggable="true" -->
 
         <!-- Facebook SDK -->
